packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__v_model__component.snap
---
source: tests/vapor/v_model.rs
expression: code
---
import { createComponent as _createComponent } from "/vue-jsx-vapor/vapor";
(() => {
  const n0 = _createComponent(Comp, {
    modelValue: () => foo,
    "onUpdate:modelValue": () => (_value) => foo = _value
  }, null, true);
  return n0;
})();
