packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__v_model__component_should_generate_model_value_modifiers.snap
---
source: tests/vapor/v_model.rs
expression: code
---
import { createComponent as _createComponent } from "vue-jsx-vapor";
(() => {
  const n0 = _createComponent(Comp, {
    modelValue: () => foo,
    "onUpdate:modelValue": () => (_value) => foo = _value,
    modelValueModifiers: () => ({
      trim: true,
      "bar-baz": true
    })
  }, null, true);
  return n0;
})();
