packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__v_model__component_with_dynamic_arguments.snap
---
source: tests/vapor/v_model.rs
expression: code
---
import { createComponent as _createComponent } from "vue-jsx-vapor";
(() => {
  const n0 = _createComponent(Comp, { $: [() => ({
    [arg]: foo,
    ["onUpdate:" + arg]: () => (_value) => foo = _value
  })] }, null, true);
  return n0;
})();
