packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__v_model__component_with_dynamic_arguments_should_generate_model_modifiers.snap
---
source: tests/vapor/v_model.rs
expression: code
---
import { createComponent as _createComponent } from "vue-jsx-vapor";
(() => {
  const n0 = _createComponent(Comp, { $: [() => ({
    [foo]: foo,
    ["onUpdate:" + foo]: () => (_value) => foo = _value,
    [foo + "Modifiers"]: () => ({ trim: true })
  }), () => ({
    [bar.value]: bar,
    ["onUpdate:" + bar.value]: () => (_value) => bar = _value,
    [bar.value + "Modifiers"]: () => ({ number: true })
  })] }, null, true);
  return n0;
})();
