packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__v_model__modifiers_number.snap
---
source: tests/vapor/v_model.rs
expression: code
---
import { applyTextModel as _applyTextModel, template as _template } from "vue";
const t0 = _template("<input>", true);
(() => {
  const n0 = t0();
  _applyTextModel(n0, () => model, (_value) => model = _value, { number: true });
  return n0;
})();
