packages/compiler-rs/tests/vapor/snapshots/r#mod__vapor__v_model__should_support_dynamic_props.snap
---
source: tests/vapor/v_model.rs
expression: code
---
import { applyDynamicModel as _applyDynamicModel, renderEffect as _renderEffect, setDynamicProps as _setDynamicProps, template as _template } from "vue";
const t0 = _template("<input>", true);
(() => {
  const n0 = t0();
  _applyDynamicModel(n0, () => model, (_value) => model = _value);
  _renderEffect(() => _setDynamicProps(n0, [obj], true));
  return n0;
})();
